--- a/_config.yml
+++ b/_config.yml
@@ -16,21 +16,13 @@
 title: Pedro Silva
 email: psf@pedrosilva.org
 description: > # this means to ignore newlines until "baseurl:"
-  ego
+  Pedro Silva
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: goretoxo
 github_username:  goretoxo
 
-# Build settings
 markdown: kramdown
-#theme: minima
-#gems:
-#  - jekyll-feed
 exclude:
   - Gemfile
   - Gemfile.lock
-#collections:
-#  - people
-#  - works
-#  - about
